# rsomics-align-core

./: Cargo.toml
src/: lib.rs
