[package]
name = "rsomics-align-core"
version = "0.1.0"
description = "Pairwise sequence alignment kernels (Smith-Waterman + Needleman-Wunsch, affine gap) for the rsomics-* tool family. Layer A primitive."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["science", "algorithms"]
keywords = ["alignment", "smith-waterman", "bioinformatics", "ksw2"]

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
