[package]
name = "rsomics-align-core"
version = "0.1.1"
description = "Pairwise sequence alignment kernels (Smith-Waterman + Needleman-Wunsch, affine gap) for the rsomics-* tool family. Layer A primitive."
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "algorithms"]
keywords = ["alignment", "smith-waterman", "bioinformatics", "ksw2"]

[dependencies]
thiserror = "2"

